feat(layout): added warning when serving app in insecure context

--- a/packages/docs/.vitepress/theme/custom.css
+++ b/packages/docs/.vitepress/theme/custom.css
@@ -5,7 +5,7 @@
     --vp-c-brand-2: #000000;
 
     --vp-c-bg: #ffffff;
-    --vp-c-bg-alt: #ffffff;
+    --vp-c-bg-alt: #f5f5f5;
 
     --vp-c-text-1: #171717;
     --vp-c-text-2: #737373;
@@ -27,8 +27,7 @@
     --vp-c-text-2: #a3a3a3;
 
     --vp-c-bg: #0a0a0a;
-    --vp-c-bg-alt: #0a0a0a;
-    --vp-c-bg-soft: #262626;
+    --vp-c-bg-alt: #161618;
 
     --vp-c-border: #262626;
     --vp-c-divider: #262626;
