--- a/packages/app-client/src/app.css
+++ b/packages/app-client/src/app.css
@@ -23,6 +23,9 @@
   --destructive: 0 84.2% 60.2%;
   --destructive-foreground: 0 0% 98%;
 
+  --warning: 31 98% 50%;
+  --warning-foreground: 0 0% 98%;
+
   --border: 0 0% 89.8%;
   --input: 0 0% 89.8%;
   --ring: 0 0% 3.9%;
@@ -54,6 +57,9 @@
 
   --destructive: 0 62.8% 30.6%;
   --destructive-foreground: 0 0% 98%;
+
+  --warning: 31 98% 50%;
+  --warning-foreground: 0 0% 98%;
 
   --border: 0 0% 14.9%;
   --input: 0 0% 14.9%;
