--- a/packages/docs/.vitepress/theme/custom.css
+++ b/packages/docs/.vitepress/theme/custom.css
@@ -13,10 +13,6 @@
     --vp-c-border: #e5e5e5;
     --vp-c-divider: #e5e5e5;
     --vp-c-gutter: #e5e5e5;
-
-    th {
-        color: var(--vp-c-text-1);
-    }
 }
 
 .dark {
@@ -28,6 +24,7 @@
 
     --vp-c-bg: #0a0a0a;
     --vp-c-bg-alt: #161618;
+    --vp-c-bg-soft: #161618;
 
     --vp-c-border: #262626;
     --vp-c-divider: #262626;
